--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
         <a href="pages/index_table.html">Overview Table</a>
         <a href="pages/index_questionnaire.html">Questionnaire Results</a>
 
+        <div class="dropdown">
+            <button class="dropbtn">Additional Visualizations 
+            <i class="fa fa-caret-down"></i>
+          </button>
+            <div class="dropdown-content">
+                <a href="pages/index_ridgeline_elaborate.html">Ridgeline</a>
+                <a href='pages/index_scatter.html'>Degree per Second (scatter)</a>
+                <a href="pages/index_cutoff.html">Data Range</a>
+                <a href="pages/index_shift_time.html">Shifted Time Cleaveland</a>
+
+
+            </div>
+        </div>
     </div>
 
 </header>
