--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -6627,7 +6627,7 @@
         <div style='text-align: center;'>
 
             <div id='week_overview_comp_Drehwand' style="display: inline-block;  width: 49%;position: relative;"></div>
-            <div id='week_avg_comp_Drehwand' style="display: inline-block;  width: 49%;position: relative;"></div>
+            <div id='week_avg_comp_Drehwand' style="display: inline-block;  width: 49%;position: relative;left:10px"></div>
 
         </div>
 
@@ -6635,20 +6635,20 @@
 
             <div id='week_overview_comp_Drehschrank' style="display: inline-block;  width: 49%;position: relative;">
             </div>
-            <div id='week_avg_comp_Drehschrank' style="display: inline-block;  width: 49%;position: relative;"></div>
+            <div id='week_avg_comp_Drehschrank' style="display: inline-block;  width: 49%;position: relative;left:10px"></div>
 
         </div>
         <div style='text-align: center;float: none;'>
 
             <div id='week_overview_comp_LampeDrehwand' style="display: inline-block;  width: 49%;position: relative;">
             </div>
-            <div id='week_avg_comp_LampeDrehwand' style="display: inline-block;  width: 49%;position: relative;"></div>
+            <div id='week_avg_comp_LampeDrehwand' style="display: inline-block;  width: 49%;position: relative;left:10px"></div>
         </div>
         <div style='text-align: center;'>
 
             <div id='week_overview_comp_LampeAussenwand' style="display: inline-block;  width: 49%;position: relative;">
             </div>
-            <div id='week_avg_comp_LampeAussenwand' style="display: inline-block;  width: 49%;position: relative;">
+            <div id='week_avg_comp_LampeAussenwand' style="display: inline-block;  width: 49%;position: relative;left:10px">
             </div>
 
         </div>
