--- a/pages/index_questionnaire.html
+++ b/pages/index_questionnaire.html
@@ -334,17 +334,39 @@
 <h4 style='position: relative;left:50px'>Q1.5 Sind die beweglichen Teile einfach in ihrer Handhabung (Y/N)</h4>
 
 <h5 style='position: relative;left:100px'>Drehschrank</h5>
+<div style='text-align:right;position:relative;right:55%'>
+    <button type="button" id='togCustomQonefiveone'>Apply</button>
+    <label></label><select multiple="multiple" class='multiselector_3 Qonefiveone_1' placeholder="Custom Pie Filter"> </select>
+</div>
 <div id='Qonefiveone' style='position: relative;left:50px'></div>
 <br>
+<div style='text-align:right;position:relative;right:55%'>
+    <button type="button" id='togCustomQonefivetwo'>Apply</button>
+    <label></label><select multiple="multiple" class='multiselector_3 Qonefivetwo_1' placeholder="Custom Pie Filter"> </select>
+</div>
 <h5 style='position: relative;left:100px'>Drehwand</h5>
 <div id='Qonefivetwo' style='position: relative;left:50px'></div>
 <br>
+<div style='text-align:right;position:relative;right:55%'>
+    <button type="button" id='togCustomQonefivethree'>Apply</button>
+    <label></label><select multiple="multiple" class='multiselector_3 Qonefivethree_1' placeholder="Custom Pie Filter"> </select>
+</div>
 <h5 style='position: relative;left:100px'>Lampe Drehwand</h5>
 <div id='Qonefivethree' style='position: relative;left:50px'></div>
 <br>
+<div style='text-align:right;position:relative;right:55%'>
+    <button type="button" id='togCustomQonefivefour'>Apply</button>
+
+    <label></label><select multiple="multiple" class='multiselector_3 Qonefivefour_1' placeholder="Custom Pie Filter"> </select>
+</div>
 <h5 style='position: relative;left:100px'>Lampe Aussenwand</h5>
 <div id='Qonefivefour' style='position: relative;left:50px'></div>
 <br>
+<div style='text-align:right;position:relative;right:55%'>
+    <button type="button" id='togCustomQonefivefive'>Apply</button>
+
+    <label></label><select multiple="multiple" class='multiselector_3 Qonefivefive_1' placeholder="Custom Pie Filter"> </select>
+</div>
 <h5 style='position: relative;left:100px'>Podest</h5>
 <div id='Qonefivefive' style='position: relative;left:50px'></div>
 
@@ -949,6 +971,11 @@
 </div>
 
 <h4 style='position: relative;left:50px'>Q2.5 Gefällt Ihnen das Farbkonzept des Mock-ups? (Y/N)</h4>
+<div style='text-align:right;position:relative;right:55%'>
+    <button type="button" id='togCustomQtwofive'>Apply</button>
+
+    <label></label><select multiple="multiple" class='multiselector_3 Qtwofive_1' placeholder="Custom Pie Filter"> </select>
+</div>
 <div id='Qtwofive' style='position: relative;left:50px'></div>
 
 <h4 style='position: relative;left:50px'>Q2.6 Ist die Temperatur im Mock-up zu kalt/warm? (MC)</h4>
@@ -1101,6 +1128,11 @@
 
 
 <h4 style='position: relative;left:50px'>Q4.1 Räumen Sie auf bevor Sie Besuch empfangen? (Y/N)</h4>
+<div style='text-align:right;position:relative;right:55%'>
+    <button type="button" id='togCustomQfourone'>Apply</button>
+
+    <label></label><select multiple="multiple" class='multiselector_3 Qfourone_1' placeholder="Custom Pie Filter"> </select>
+</div>
 <div id='Qfourone' style='position: relative;left:50px'></div>
 
 <h2 style='position: relative;left:30px;'>5. Testwohnen zu zweit</h2>
@@ -1146,6 +1178,11 @@
 </div>
 
 <h4 style='position: relative;left:50px'>Q5.2 Kommt man sich bei der Benutzung der beweglichen Bauteile in die Quere? (Y/N)</h4>
+<div style='text-align:right;position:relative;right:55%'>
+    <button type="button" id='togCustomQfivetwo'>Apply</button>
+
+    <label></label><select multiple="multiple" class='multiselector_3 Qfivetwo_1' placeholder="Custom Pie Filter"> </select>
+</div>
 <div id='Qfivetwo' style='position: relative;left:50px'></div>
 
 
@@ -1190,6 +1227,11 @@
     </div>
 </div>
 <h4 style='position: relative;left:50px'>Q5.4 Gibt es bei Ihnen eine Person, die"zuständig" für die Raumänderungen ist? (Y/N)</h4>
+<div style='text-align:right;position:relative;right:55%'>
+    <button type="button" id='togCustomQfivefour'>Apply</button>
+
+    <label></label><select multiple="multiple" class='multiselector_3 Qfivefour_1' placeholder="Custom Pie Filter"> </select>
+</div>
 <div id='Qfivefour' style='position: relative;left:50px'></div>
 
 <h2 style='position: relative;left:30px;'>6. Allgemeines</h2>
@@ -1508,6 +1550,16 @@
     var $Qsixfive_1 = $('.Qsixfive_1')
     var $Qsixsix_1 = $('.Qsixsix_1')
 
+    var $Qonefiveone_1 = $('.Qonefiveone_1')
+    var $Qonefivetwo_1 = $('.Qonefivetwo_1')
+    var $Qonefivethree_1 = $('.Qonefivethree_1')
+    var $Qonefivefour_1 = $('.Qonefivefour_1')
+    var $Qonefivefive_1 = $('.Qonefivefive_1')
+
+    var $Qtwofive_1 = $('.Qtwofive_1')
+    var $Qfourone_1 = $('.Qfourone_1')
+    var $Qfivetwo_1 = $('.Qfivetwo_1')
+    var $Qfivefour_1 = $('.Qfivefour_1')
 
     filter_quest()
 
