update header of newly added pages

--- a/pages/index_scatter.html
+++ b/pages/index_scatter.html
@@ -74,47 +74,40 @@
 </style>
 <header>
     <div class="navbar">
-        <a href="../index.html">Home</a>
+
+        <a href="index.html">Home</a>
+
+        <a href="animation_view.html" style='border-radius:2px;'>Animation View</a>
+
         <div class="dropdown">
-            <button class="dropbtn">Complete Overview 
+            <button class="dropbtn">Main View
                 <i class="fa fa-caret-down"></i>
-              </button>
+            </button>
             <div class="dropdown-content">
-                <a href="index_ridgeline_elaborate.html">Ridgeline</a>
-                <a href="index_weekly.html">Weekly Overview</a>
-                <a href="index_overlay.html">Overlay Weekly Profile</a>
-                <a href="index_daily.html">Daily Overview</a>
+                <a href="pages/index_comparison.html">Two Group Comparison View</a>
+                <a href="pages/index_single_choice.html">Single Group View</a>
 
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn" style='background-color: dodgerblue;
-            color: white;'>Main Sensor Data Evaluation
-                <i class="fa fa-caret-down"></i>
-              </button>
-            <div class="dropdown-content">
-                <a href="index_tofromscatter.html">To-From Scatter</a>
-                <a href='index_freqDistr.html'> Frequency Distribution (scatter)</a>
-                <a href='index_MovmentFreqDistr.html'>Movement Frequency Distribution</a>
-                <a href='index_degperms.html'>Degree per Second</a>
-                <a href='index_scatter.html' style='background-color: rgb(65, 142, 219); color: white;'>Degree per Second (scatter)</a>
-                <a href="index_cutoff.html">Data Range</a>
 
-            </div>
-        </div>
 
-        <div class="dropdown">
-            <button class="dropbtn">Profile
-                <i class="fa fa-caret-down"></i>
-              </button>
+        </div>
+        <a href="pages/index_table.html">Overview Table</a>
+        <a href="pages/index_questionnaire.html">Questionnaire Results</a>
+
+        <div class="dropdown" style='background-color: dodgerblue;
+        color: white; border-radius:2px;'>
+            <button class="dropbtn">Additional Visualizations 
+            <i class="fa fa-caret-down"></i>
+          </button>
             <div class="dropdown-content">
-                <a href="index_parset.html">Parset</a>
-                <a href="index_radar.html">Radar Chart</a>
+                <a href="pages/index_ridgeline_elaborate.html">Ridgeline</a>
+                <a href='pages/index_scatter.html' style='background-color: rgb(65, 142, 219); color: white;'>Degree per Second (scatter)</a>
+                <a href="pages/index_cutoff.html">Data Range</a>
+                <a href="pages/index_shift_time.html">Shifted Time Cleaveland</a>
 
 
             </div>
         </div>
-
     </div>
 
 </header>
