--- a/pages/index_cutoff.html
+++ b/pages/index_cutoff.html
@@ -34,63 +34,42 @@
 </style>
 
 <header>
+
     <div class="navbar">
-        <a href="../index.html">Home</a>
-        <div class="dropdown">
-            <button class="dropbtn">Complete Overview 
-            <i class="fa fa-caret-down"></i>
-          </button>
-            <div class="dropdown-content">
-                <a href="index_ridgeline_elaborate.html">Ridgeline</a>
-                <a href="index_weekly.html">Weekly Overview</a>
-                <a href="index_overlay.html">Overlay Weekly Profile</a>
-                <a href="index_daily.html">Daily Overview</a>
-            </div>
-        </div>
-        <div class="dropdown">
-            <button style='background-color: dodgerblue;
-            color: white;' class="dropbtn">Main Sensor Data Evaluation 
-            <i class="fa fa-caret-down"></i>
-          </button>
-            <div class="dropdown-content">
 
-                <a href="index_tofromscatter.html">To From Scatter</a>
-                <a href='index_freqDistr.html'> Frequency Distribution (scatter)</a>
-                <a href='index_MovmentFreqDistr.html'>Movement Frequency Distribution</a>
-                <a href='index_degperms.html'>Degree per Second</a>
-                <a href='index_scatter.html'>Degree per Second (scatter)</a>
-                <a href="index_cutoff.html" style='background-color: rgb(65, 142, 219); color: white;'>Data Range</a>
+        <a href="index.html">Home</a>
 
-            </div>
-        </div>
+        <a href="animation_view.html" style='border-radius:2px;'>Animation View</a>
+
         <div class="dropdown">
-            <button class="dropbtn">Profile
-            <i class="fa fa-caret-down"></i>
-          </button>
-            <div class="dropdown-content">
-                <a href="index_parset.html">Parset</a>
-                <a href="index_radar.html">Radar Chart</a>
-
-
-            </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn">Data Shift
+            <button class="dropbtn">Main View
                 <i class="fa fa-caret-down"></i>
-              </button>
+            </button>
             <div class="dropdown-content">
-                <a href="index_data_shift_bar.html">Shift Bar Chart</a>
-                <a href="index_data_shift_amout.html">Shift Amount Bar Chart</a>
-                <a href="index_data_shift_stacked.html">Stacked Shift Bar Chart</a>
-                <a href="index_data_shift_stacked_perc.html">Shift Bar Chart Percent</a>
-                <a href="index_scatterTF_shift.html">Shift To/From Scatter</a>
-                <a href="index_shift_time.html">Shift Time</a>
-                <a href="index_while_move.html">While Movements </a>
+                <a href="pages/index_comparison.html">Two Group Comparison View</a>
+                <a href="pages/index_single_choice.html">Single Group View</a>
+
+            </div>
+
+
+        </div>
+        <a href="pages/index_table.html">Overview Table</a>
+        <a href="pages/index_questionnaire.html">Questionnaire Results</a>
+
+        <div class="dropdown" style='background-color: dodgerblue;
+        color: white; border-radius:2px;'>
+            <button class="dropbtn">Additional Visualizations 
+            <i class="fa fa-caret-down"></i>
+          </button>
+            <div class="dropdown-content">
+                <a href="pages/index_ridgeline_elaborate.html">Ridgeline</a>
+                <a href='pages/index_scatter.html'>Degree per Second (scatter)</a>
+                <a href="pages/index_cutoff.html" style='background-color: rgb(65, 142, 219); color: white;'>Data Range</a>
+                <a href="pages/index_shift_time.html">Shifted Time Cleaveland</a>
 
 
             </div>
         </div>
-
     </div>
 
 </header>
