--- a/pages/index_scatter.html
+++ b/pages/index_scatter.html
@@ -84,15 +84,15 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="pages/index_comparison.html">Two Group Comparison View</a>
-                <a href="pages/index_single_choice.html">Single Group View</a>
+                <a href="index_comparison.html">Two Group Comparison View</a>
+                <a href="index_single_choice.html">Single Group View</a>
 
             </div>
 
 
         </div>
-        <a href="pages/index_table.html">Overview Table</a>
-        <a href="pages/index_questionnaire.html">Questionnaire Results</a>
+        <a href="index_table.html">Overview Table</a>
+        <a href="index_questionnaire.html">Questionnaire Results</a>
 
         <div class="dropdown" style='background-color: dodgerblue;
         color: white; border-radius:2px;'>
@@ -100,10 +100,10 @@
             <i class="fa fa-caret-down"></i>
           </button>
             <div class="dropdown-content">
-                <a href="pages/index_ridgeline_elaborate.html">Ridgeline</a>
-                <a href='pages/index_scatter.html' style='background-color: rgb(65, 142, 219); color: white;'>Degree per Second (scatter)</a>
-                <a href="pages/index_cutoff.html">Data Range</a>
-                <a href="pages/index_shift_time.html">Shifted Time Cleaveland</a>
+                <a href="index_ridgeline_elaborate.html">Ridgeline</a>
+                <a href='index_scatter.html' style='background-color: rgb(65, 142, 219); color: white;'>Degree per Second (scatter)</a>
+                <a href="index_cutoff.html">Data Range</a>
+                <a href="index_shift_time.html">Shifted Time Cleaveland</a>
 
 
             </div>
