--- a/index_prepare_data.html
+++ b/index_prepare_data.html
@@ -31,7 +31,7 @@
 
     <div class="cont">
         <p>
-            Converting the data into 8 different files. <br> As soon as a file has downloaded automatically on to your desktop, the process is finished.
+            Converting the data into 9 different files. <br> As soon as a file has downloaded automatically on to your desktop, the process is finished.
             <br>Make sure the files are saved with their given names in the data folder.
         </p>
     </div>
@@ -40,12 +40,17 @@
     <script>
         var view = 1;
         initialize();
+        /*
+                prepare_data_processed();
+                prepare_snap_densityPlot();
+                prepare_data_scatter_matrix();
+                prepare_data_animation_perweek();
+                prepare_data_table();
+        */
+        // prepare_data_processed_Besucher();
+        //prepare_snap_densityPlot_Besucher();
 
-        prepare_data_processed();
-        prepare_snap_densityPlot();
-        prepare_data_scatter_matrix();
-        prepare_data_animation_perweek();
-        prepare_data_table();
+        //  prepare_data_scatter_matrix_Besucher();
     </script>
 
 </body>
