--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -6215,6 +6215,10 @@
                 <input style='width : 70px; margin-left: 30px; ' placeholder="HH:MM" type="time" id='input_time_to_g1'>
                 <input type="checkbox" id="check_time_g1" title="Disable Time Filter" checked>
 
+                <label id='input_label'> Remove Visiting Hours (Besucher): </label><input type="checkbox" id="check_besucher_g1" title="Remove Besucherzeiten" unchecked>
+                <br><text>Beware that visiting hours are not removed in the scatter plots.</text>
+
+
             </div>
 
 
@@ -6349,6 +6353,9 @@
                 <input style='width : 70px; margin-left: 30px; ' placeholder="HH:MM" type="time" id='input_time_to_g2'>
                 <input type="checkbox" id="check_time_g2" title="Disable Time Filter" checked>
 
+                <label id='input_label'> Remove Visiting Hours (Besucher): </label><input type="checkbox" id="check_besucher_g2" title="Remove Besucherzeiten" unchecked>
+
+                <br> <text>Beware that visiting hours are not removed in the scatter plots.</text>
             </div>
 
 
