added without visitors option to data_table

--- a/index_prepare_data.html
+++ b/index_prepare_data.html
@@ -51,6 +51,7 @@
         //prepare_snap_densityPlot_Besucher();
 
         //  prepare_data_scatter_matrix_Besucher();
+        //  prepare_data_table_Besucher();
     </script>
 
 </body>
