--- a/pages/index_table.html
+++ b/pages/index_table.html
@@ -148,21 +148,37 @@
 <div class="container">
     <table id="profile" class="display" style="width:90%; "></table>
 </div>
-<h2 style='position: relative; left:50px'>Sensor Data Measurement Quantity by Sensor and Meta-Information <text id="title" style="font-size:medium"></text>
+<h2 style='position: relative; left:50px'>Sensor Data Measurement Quantity <text id="title" style="font-size:medium"></text>
 </h2>
 <div class="container" style='  overflow-x: scroll;'>
     <table id="example" class="display" style="width:90%; ">
     </table>
 </div>
-<h2 style='position: relative; left:50px'>Sensor Data Measurement Quantity by Sensor and Meta-Information for 2020 <text id="title2020" style="font-size:medium"></text>
+<h2 style='position: relative; left:50px'>Sensor Data Measurement Quantity <text style="color: blue;">without Visitors</text><text id="title_B" style="font-size:medium"></text>
+</h2>
+<div class="container" style='  overflow-x: scroll;'>
+    <table id="example_B" class="display" style="width:90%; ">
+    </table>
+</div>
+
+<h2 style='position: relative; left:50px'>Sensor Data Measurement Quantity for 2020 <text id="title2020" style="font-size:medium"></text>
 </h2>
 <div class="container" style='  overflow-x: scroll;'>
     <table id="igong" class="display" style="width:90%; ">
     </table>
 </div>
+<h2 style='position: relative; left:50px'>Sensor Data Measurement Quantity for 2020 <text style="color: blue;">without Visitors</text> <text id="title2020_B" style="font-size:medium"></text>
+</h2>
+<div class="container" style='  overflow-x: scroll;'>
+    <table id="igong_B" class="display" style="width:90%; ">
+    </table>
+</div>
+
+
 
 <script>
-    data_table()
+    data_table();
+    data_table_Besucher();
 </script>
 
 </html>
